--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.23.0",
+"@typescript-eslint/parser": "^2.23.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -19,7 +21,7 @@
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
-    "typesafe-actions": "^5.1.0",
+    "typesafe-actions": "4.4.2",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
